--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-hi
-
-
+<h1>hi</h1>
+<b>
+<b>
+<b>
+<b>
+css coming soon
+<b>
 <a href="async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
