--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<center>
 <h1>hi</h1>
 <b>
 <b>
@@ -6,3 +7,4 @@
 css coming soon
 <b>
 <a href="async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
+  </center>
