--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <b>
 <b>
 css coming soon
+<div class="news">
+  <h3> NEWS </h3>
+  <h6> 19/06/2021 </h6>
+  <p> I created this awful website :) </p>
 <b>
-<a href="async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
+<a href="javasccript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
   </center>
