--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 css coming soon
 <div class="news">
   <h3> NEWS </h3>
-  <h6> 19/06/2021 </h6> I made this coooool website
+  19/06/2021 - I made this coooool website
+</div>
 <b>
 <a href="javasccript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
   </center>
