--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ css coming soon
 </div>
 <br>
 <br>
-<a href="javasccript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()">Bataspam III (Bookmark This)</a>
+<a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark This ())
   </center>
