--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ css coming soon
 <div class="news">
   <h3> NEWS </h3>
   19/06/2021 - I made this coooool website
+  19/06/2021 - Batashock forked the repository and wrote this line
 </div>
 <br>
 <br>
