--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <center>
 <h1>hi</h1>
+  
+<a href="codes.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
+  
 <br>
 css coming soon
 <div class="news">
