--- a/code.html
+++ b/code.html
@@ -6,6 +6,9 @@
 
 <center>
 <h1> Random Code Stuff </h1>
+  
+<a href="codes.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="will803.github.io"> Main Page </a>
+  
 <br>
 <br>
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark This ())
