--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
 <center>
 <h1> Random Code Stuff </h1>
   
-<a href="codes.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="will803.github.io"> Main Page </a>
+<a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="will803.github.io"> Main Page </a>
   
 <br>
 <br>
