--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 <h1>hi</h1>
   
-<a href="codes.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
+<a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
   
 <br>
 css coming soon
