--- a/code.html
+++ b/code.html
@@ -11,5 +11,5 @@
   
 <br>
 <br>
-<a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark This ())
+<a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
 </center>
