--- a/code.html
+++ b/code.html
@@ -12,4 +12,5 @@
 <br>
 <br>
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
+<a href='ms-calculator://'> click here ;) <a>
 </center>
