added timestamp discord thing idk
probs wont work. i'm not good at javascript

--- a/code.html
+++ b/code.html
@@ -13,6 +13,8 @@
 <br>
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
 <br>
-<a href='ms-calculator://'> click here ;) <a>
+<a href='ms-calculator://'> click here ;) </a>
 <br>
+<a href='document.getElementById("dis").innerHTML = round(Date.now() / 1000);'>click here to get timestamp thing discord idk</a>
+<p id="dis"> :) </p>
 </center>
