--- a/code.html
+++ b/code.html
@@ -15,6 +15,6 @@
 <br>
 <a href='ms-calculator://'> click here ;) </a>
 <br>
-<a href='document.getElementById("dis").innerHTML = round(Date.now() / 1000);'>click here to get timestamp thing discord idk</a>
+<button onclick='document.getElementById("dis").innerHTML = round(Date.now() / 1000);'>click here to get timestamp thing discord idk</button>
 <p id="dis"> :) </p>
 </center>
