--- a/code.html
+++ b/code.html
@@ -15,6 +15,6 @@
 <br>
 <a href='ms-calculator://'> click here ;) </a>
 <br>
-<button onclick='document.getElementById("dis").innerHTML = round(Date.now() / 1000);'>click here to get timestamp thing discord idk</button>
+<button onclick='document.getElementById("dis").innerHTML = "<t:", Math.round(Date.now() / 1000), ">";'>click here to get timestamp thing discord idk</button>
 <p id="dis"> :) </p>
 </center>
