--- a/code.html
+++ b/code.html
@@ -8,13 +8,15 @@
 <h1> Random Code Stuff </h1>
   
 <a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="will803.github.io"> Main Page </a>
-  
+<br>
 <br>
 <br>
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
 <br>
+<br>
 <a href='ms-calculator://'> click here ;) </a>
 <br>
-<button onclick='document.getElementById("dis").innerHTML = "<t:", Math.round(Date.now() / 1000), ">";'>click here to get timestamp thing discord idk</button>
+<br>
+<button onclick='document.getElementById("dis").innerHTML = "<t:"+ Math.round(Date.now() / 1000) +">";'>click here to get timestamp thing discord idk</button>
 <p id="dis"> :) </p>
 </center>
