--- a/code.html
+++ b/code.html
@@ -17,6 +17,6 @@
 <a href='ms-calculator://'> click here ;) </a>
 <br>
 <br>
-<button onclick='document.getElementById("dis").innerHTML = "<t:"+ Math.round(Date.now() / 1000) +">";'>click here to get timestamp thing discord idk</button>
+<button onclick='document.getElementById("dis").innerHTML = "\<t:"+ Math.round(Date.now() / 1000) +">";'>click here to get timestamp thing discord idk</button>
 <p id="dis"> :) </p>
 </center>
