--- a/code.html
+++ b/code.html
@@ -17,6 +17,6 @@
 <a href='ms-calculator://'> click here ;) </a>
 <br>
 <br>
-<button onclick='document.getElementById("dis").innerHTML = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>click here to get timestamp thing discord idk (it doesn't work because of the way html works :|)</button>
+<button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>click here to get timestamp thing discord idk (it doesn't work because of the way html works :|)</button>
 <p id="dis"> :) </p>
 </center>
