--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <h1>hi</h1>
   
 <a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
-  
+
 <br>
 css coming soon
+<a href="https://batashock.github.io/"> check out Batashocks site!! </a>  
 <div class="news">
   <h3> NEWS </h3>
   19/06/2021 - I made this coooool website
+  19/10/2021 - i fixed the bug on the random code page with the timestamp thing
 </div>
 <br>
 <iframe src="https://discord.com/widget?id=761018558222041098&theme=dark" width="175" height="250" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
