--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ css coming soon
   19/10/2021 - i fixed the bug on the random code page with the timestamp thing
 </div>
 <br>
-<iframe src="https://discord.com/widget?id=761018558222041098&theme=dark" width="250" height="250" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <br>
+if u cant see this u need to check ur eyes
   </center>
