--- a/code.html
+++ b/code.html
@@ -19,4 +19,8 @@
 <br>
 <button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>click here to get the current discord timestamp thingy (copy and paste it into discord chat)</button>
 <p id="dis"> :) </p>
+<br>
+talking about discord <br>
+<iframe src="https://discord.com/widget?id=761018558222041098&theme=dark" width="50" height="50" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
 </center>
