--- a/code.html
+++ b/code.html
@@ -17,10 +17,9 @@
 <a href='ms-calculator://'> click here ;) </a>
 <br>
 <br>
-<button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>click here to get the current discord timestamp thingy (copy and paste it into discord chat)</button>
+<button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>⎛click here to get the current discord timestamp thingy (copy and paste it into discord chat)⎞</button>
 <p id="dis"> :) </p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-talking about discord <br>
-<iframe src="https://discord.com/widget?id=761018558222041098&theme=dark" width="500" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<br>
+<br>
 
 </center>
