--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@ css coming soon
 </div>
 <br>
 <br>
+
+  
+  
+<blockquote class="twitter-tweet" data-lang="ar" data-theme="dark"><p lang="en" dir="ltr">i just realised how deep connect 4 is like you are literally connnecting peoples souls <a href="https://twitter.com/hashtag/deep?src=hash&amp;ref_src=twsrc%5Etfw">#deep</a></p>&mdash; Will94 (@WiII914) <a href="https://twitter.com/WiII914/status/1480504218465099777?ref_src=twsrc%5Etfw">١٠ يناير ٢٠٢٢</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 if u cant see this u need to check ur eyes
   </center>
