--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <head>
-  <title>
-    Will914's Site
+	<title>
+    Mia's EPIC Site
     </title>
+	<script>
+	function title(){
+		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
+		setTimeout(title, 100);
+	}	
+	title()
+	</script>
+	<style>
+	html, body {margin:0;padding:0;}
+	.header {background-image:linear-gradient(#bf0000, rgba(0, 0, 0, 0))}
+	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #bf0000)}
+	body {background-color:#800000;color:#ffffff}
+	.white {color:rgba(0,0,0,0)}
+	th{text-align: center;font-weight: normal}
+	a{background-color: #f44336;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block}
+	</style>
 </head>
-<center>
-<h1>hi</h1>
-  
-<a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
 
-<br>
-css coming soon
+<div class="header">
+	<br>
+	<center>
+		<h1>hi</h1>
+		<a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
+	</center>
+	<br>
+</div>
+
+<center>
+css <s>coming soon</s> WIP
 <br><br>
 <a href="https://batashock.github.io/"> check out Batashocks site!! </a>  
+
 <div class="news">
-  <h3> NEWS </h3>
-  19/06/2021 - I made this coooool website
-  <br>
-  19/10/2021 - i fixed the bug on the random code page with the timestamp thing
+  <h3>-- NEWS --</h3>
+  <table>
+  <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website</td></tr>
+  <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
+  <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
+  </table>
 </div>
 <br>
 <br>
@@ -25,4 +49,8 @@ css coming soon
   
 <blockquote class="twitter-tweet" data-lang="ar" data-theme="dark"><p lang="en" dir="ltr">i just realised how deep connect 4 is like you are literally connnecting peoples souls <a href="https://twitter.com/hashtag/deep?src=hash&amp;ref_src=twsrc%5Etfw">#deep</a></p>&mdash; Will94 (@WiII914) <a href="https://twitter.com/WiII914/status/1480504218465099777?ref_src=twsrc%5Etfw">١٠ يناير ٢٠٢٢</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 if u cant see this u need to check ur eyes
-  </center>
+<p class="white">if you cant see this then i understand why</p>
+</center>
+<div class="footer">
+<br><br><br><br><br>
+</div>
