--- a/code.html
+++ b/code.html
@@ -19,12 +19,11 @@
 	<br>
 	<center>
 	<h1> Random Code Stuff </h1>
+	<a href="code.html" class="links"> Random Code Stuff </a> - <a href="aboutme.html" class="links"> About Me </a> - <a href="will803.github.io" class="links"> Main Page </a>
 	</center>
 	<br>
 </div>
-<center>
-<a href="code.html" class="links"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw" class="links"> My Youtube </a> - <a href="will803.github.io" class="links"> Main Page </a>
-<br>
+<center><br>
 <br>
 <br>
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
