--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<br>
 	<center>
 		<h1>hi</h1>
-		<a href="code.html"> random code stuff </a> - <a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a> - <a href="https://will803.github.io"> Main Page </a>
+		<a href="code.html" class="links"> Random Code Stuff </a> - <a href="aboutme.html" class="links"> About Me </a> - <a href="will803.github.io" class="links"> Main Page </a>
 	</center>
 	<br>
 </div>
