--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ css <s>coming soon</s> WIP
   <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
   <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
   <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
+  <tr><th>4/02/2022</th><td>-</td><td>replaced youtube button with snazzy new about me page and fixed capitalisation inconsistencies on the other buttons</td></tr>
 </table>
 </div>
 <br>
