changed the way the link bar works
for my own convenience ofc

--- a/aboutme.html
+++ b/aboutme.html
@@ -48,8 +48,8 @@
 	<br>
 	<center>
 	<h1> About Me </h1>
-	<a href="code.html" class="links"> Random Code Stuff </a> - <a href="aboutme.html" class="links"> About Me </a> - <a href="will803.github.io" class="links"> Main Page </a>
-	</center>
+	<span id="menulinks">i am epic very!</span>
+	<script src="links.js" type="text/javascript"></script>	</center>
 	<br>
 </div>
 <center>
