--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<br>
 	<center>
 		<h1>hi</h1>
-		<a href="code.html" class="links"> Random Code Stuff </a> - <a href="aboutme.html" class="links"> About Me </a> - <a href="will803.github.io" class="links"> Main Page </a>
+	<span id="menulinks">idex dot html</span>
+	<script src="links.js" type="text/javascript"></script>
 	</center>
 	<br>
 </div>
@@ -42,6 +43,7 @@ css <s>coming soon</s> WIP
   <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
   <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
   <tr><th>4/02/2022</th><td>-</td><td><p title='"snazzy" "capitalisation inconsistencies" am i okay?'>replaced youtube button with snazzy new about me page and fixed capitalisation inconsistencies on the other buttons</p></td></tr>
+  <tr><th>5/02/2022</th><td>-</td><td>Changed the way the menu thingy link bar at the top works, now I don't have to update all the pages to update it.</td></tr>
 </table>
 </div>
 <br>
