--- a/code.html
+++ b/code.html
@@ -19,7 +19,8 @@
 	<br>
 	<center>
 	<h1> Random Code Stuff </h1>
-	<a href="code.html" class="links"> Random Code Stuff </a> - <a href="aboutme.html" class="links"> About Me </a> - <a href="will803.github.io" class="links"> Main Page </a>
+	<span id="menulinks">the univserse has me invisible face</span>
+	<script src="links.js" type="text/javascript"></script>
 	</center>
 	<br>
 </div>
