--- a/404.html
+++ b/404.html
@@ -1,1 +1,56 @@
+<head>
+	<title>
+    Random Code - Mia's EPIC Site
+    </title>
+	<style>
+	html, body {margin:0;padding:0;}
+	.header {background-image:linear-gradient(#ff8000, rgba(0, 0, 0, 0))}
+	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #ff8000)}
+	body {background-image: linear-gradient(black, #ff8000);color:#ffffff}
+	.white {color:rgba(0,0,0,0)}
+	th{text-align: center;font-weight: normal}
+	.links{background-color: #ff8000;color: black;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block}
+	a{color:#ff8000}
+	button{background-color: #ff8000}
+	p{color:#ff8000}
+	.funnyman{
+		font-size: 500px;
+		text-shadow:
+		-25px -25px 0 #000,
+		25px 25px 0 #000,
+		25px -25px 0 #ffc83d,
+		-25px 25px 0 #ffc83d
+		}
+	</style>
+</head>
+<body>
+<center>
+<div class="header">
+	<br>
+	<center>
+	<h1> Four Hundred And Four </h1>
+	<span id="menulinks">well im in your mind</span>
+	<script src="links.js" type="text/javascript"></script>
+	</center>
+	<br>
+</div>
 <a href="https://will803.github.io/"> you're a 404 ;( </a>
+<br>
+<span class="funnyman">🙂</span>
+<br>
+<button onclick="history.back()" onmouseover="funny();">TURN BACK NOW</button>
+<div id="funny">
+<script>
+function funny(){
+	const a = document.querySelector('#funny');
+	const btn = document.createElement("p");
+	const br = document.createElement("br");
+	btn.innerHTML = "TURN BACK NOW";
+	a.appendChild(btn);
+	a.appendChild(br);
+	setTimeout(funny, 100);
+}
+</script>
+</div>
+</center>
+</body>
