--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ css <s>coming soon</s> WIP
   <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
   <tr><th>4/02/2022</th><td>-</td><td><p title='"snazzy" "capitalisation inconsistencies" am i okay?'>replaced youtube button with snazzy new about me page and fixed capitalisation inconsistencies on the other buttons</p></td></tr>
   <tr><th>5/02/2022</th><td>-</td><td>Changed the way the menu thingy link bar at the top works, now I don't have to update all the pages to update it.</td></tr>
+  <tr><th></th><td></td><td>I also gave the 404 page css and actual content and removed unused files from the dir</td></tr>
 </table>
 </div>
 <br>
