--- a/404.html
+++ b/404.html
@@ -3,15 +3,19 @@
     404 - Mia's EPIC Site
     </title>
 	<style>
+	@font-face {
+		font-family: funny;
+		src: url(assets/funny.ttf);
+	}
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#ff8000, rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #ff8000)}
-	body {background-image: linear-gradient(black, #ff8000);color:#ffffff}
+	body {background-image: linear-gradient(black, #ff8000);color:#ffffff;font-family: funny}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
 	.links{background-color: #ff8000;color: black;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block}
 	a{color:#ff8000}
-	button{background-color: #ff8000}
+	button{background-color: #ff8000; font-family: funny}
 	p{color:#ff8000}
 	.funnyman{
 		font-size: 500px;
@@ -29,7 +33,7 @@
 	<br>
 	<center>
 	<h1> Four Hundred And Four </h1>
-	<span id="menulinks">well im in your mind</span>
+	<span id="menulinks">well im in 4our mind</span>
 	<script src="links.js" type="text/javascript"></script>
 	</center>
 	<br>
