--- a/tags.html
+++ b/tags.html
@@ -69,3 +69,13 @@ you should press <kbd>ctrl + w (64)</kbd>
 <main>someone probably has done (69)</main>
 <map name="70"> </map>
 <mark> it before (71)</mark>
+<meta name="description" content="Hi from (72)">
+<meter value="73" min="0" max="100"> SO TIRED (73)</meter> 
+<nav> seventy four (74)</nav>
+<noframes> oh boy your browser doesn't support frames!!! oh no!!!!! (75) </noframes>
+<noscript>you can only see this if you turned off javascript or something (76)</noscript>
+<object data="assets/slightly-smiling-face.png" width="77" height="77"></object>
+<ol> this tag kinda loos like a guy with a backpack putting his hands on his head or something im tired (78)</ol>
+<optgroup>im bored and TIRED TIRED TIRED and you cant see this(79)</optgroup>
+<option value="idk"> how many tags are there (80)</option>
+
