--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 	<title>
     404 - Mia's EPIC Site
     </title>
+	<meta name="description" content="🙂">
 	<style>
 	@font-face {
 		font-family: funny;
