--- a/code.html
+++ b/code.html
@@ -2,6 +2,7 @@
 	<title>
     Random Code - Mia's EPIC Site
     </title>
+	<meta name="description" content="Random things">
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#2a8000, rgba(0, 0, 0, 0))}
