--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<title>
     Mia's EPIC Site
     </title>
+	<meta name="description" content="This site is very epic!">
 	<script>
 	function title(){
 		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
