--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 	<title>
     About Me - Mia's EPIC Site
     </title>
+	<meta name="description" content="About me!!!!!!!!!!!!">
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
