--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
     404 - Mia's EPIC Site
     </title>
 	<meta name="description" content="🙂">
+	<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 	<style>
 	@font-face {
 		font-family: funny;
