--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ css <s>coming soon</s> WIP
   <tr><th>5/02/2022</th><td>-</td><td>Changed the way the menu thingy link bar at the top works, now I don't have to update all the pages to update it.</td></tr>
   <tr><th></th><td></td><td>I also gave the 404 page css and actual content and removed unused files from the dir and made new tags page</td></tr>
   <tr><th>6/02/2022</th><td>-</td><td>descriptosn</td></tr>
+  <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
 
 </table>
 </div>
