--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,9 @@
     About Me - Mia's EPIC Site
     </title>
 	<meta name="description" content="About me!!!!!!!!!!!!">
+	<script>
+	console.log("%cwhy are you so silly!?!?!?", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
+	</script>
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
