--- a/aboutme.html
+++ b/aboutme.html
@@ -45,6 +45,12 @@
 		-2px -1px 0 #000,
 		2px 1px 0 #FFF
 	}
+	.p2{
+	    color: #BCBCBC;
+		text-shadow:
+		2px 1px 0 #000,
+		-2px -1px 0 #FFF
+	}
 	</style>
 </head>
 
@@ -63,6 +69,10 @@
 <p class="p1">Hi im Mia</p>
 <p class="p1">Thats all you need to know ig</p>
 <p class="p1"><a href="https://www.youtube.com/channel/UC2Pn0tzn0c3HLs3Q8mJaZRw"> My Youtube </a></p>
+<br>
+<br>
+<br>
+<p class="p1">but if you really want to dm me then heres my discord << <span class="p2">Mi​aA#541.4A</span> >> (sorry it <span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)</span></p> 
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
