--- a/aboutme.html
+++ b/aboutme.html
@@ -72,7 +72,7 @@
 <br>
 <br>
 <br>
-<p class="p1">but if you really want to dm me then heres my discord << <span class="p2">Mi​aA#541.4A</span> >> (sorry it <span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)</span></p> 
+<p class="p1">but if you really want to dm me then heres my discord << <span class="p2">Mi​aA#541.4A</span> >> (sorry it <span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)</span> (and is now outdated anyway lmfao)</p> 
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
