--- a/404.html
+++ b/404.html
@@ -41,6 +41,8 @@
 	<br>
 </div>
 <a href="https://will803.github.io/"> you're a 404 ;( </a>
+<br><br>
+<a href="040.html"> Now Learn </a>
 <br>
 <span class="funnyman">🙂</span>
 <br>
