HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL
HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL HELL

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,8 @@
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
-	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
+	.footer {background-image:linear-gradient(195deg, #FFFFFF00,#FFFFFF00,#000),linear-gradient(165deg, #FFFFFF00,#FFFFFF00,#000);}
+	.footer2 {background-image:linear-gradient(180deg, #FFFFFF00,#FFFFFF00,#F00);z-index:-10;}
 	body {
 		background-image: 
 			repeating-linear-gradient(
@@ -73,8 +74,60 @@
 <br>
 <br>
 <p class="p1">but if you really want to dm me then heres my discord << <span class="p2">Mi​aA#541.4A</span> >> (sorry it <span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)</span> (and is now outdated anyway lmfao)</p> 
-<!-- <div class="footer">
-<br><br><br><br><br>
-</div> --> 
- 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="footer2">
+<br>
+<br>
+<br>
+<div class="footer">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<a href="HELL.html" class="links"> HELL </a> - <a href="HELL.html" class="links"> HELL </a> - <a href="HELL.html" class="links"> HELL </a> - <a href="HELL.html" class="links"> HELL </a>
+<br><br><br>
+</div>
+</div> 
 
