--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
 	body {
-		background-color: black;
+		background-image:linear-gradient(90deg, #301934 0%, #000 20%, #000 80%, #301934 100%)
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
