--- a/code.html
+++ b/code.html
@@ -14,6 +14,14 @@
 	a{color:#55ff00}
 	button{background-color: #00ff00}
 	</style>
+	<script> 
+	var pee = 0;
+	function peecheck(){
+		if (pee == 30) {
+			document.write("<center><h1>QUITE UN FUNNY <br><br><br><br><br><br><br><br><br><br>😡</h1></center>")
+		}
+	}
+	</script>
 </head>
 
 <div class="header">
@@ -25,22 +33,24 @@
 	</center>
 	<br>
 </div>
-<center><br>
-<br>
-<br>
+<center><br><br><br>
+
 <a href='javascript:async function BS(){await fetch("./post.php",{"headers":{"Content-Type":"application/x-www-form-urlencoded;",},"body":"text=bataspam v3","method": "POST",});};BS();BS();BS();BS();BS()'>Bataspam III</a> (Bookmark thing)
-<br>
-<br>
+
+<br><br>
+
 <a href='ms-calculator://'> click here ;) </a>
-<br>
-<br>
-<button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;";'>⎛click here to get the current discord timestamp thingy (copy and paste it into discord chat)⎞</button>
+
+<br><br>
+
+<button onclick='document.getElementById("dis").textContent = "&lt;t:"+ Math.round(Date.now() / 1000) +"&gt;"; pee++; peecheck();'>⎛click here to get the current discord timestamp thingy (copy and paste it into discord chat)⎞</button>
 <p id="dis"> :) </p>
-<br>
-<br>
+
+<br><br>
+
 <p><a href="tags.html"> i did all the tags yay :(  </a></p> 
-<br>
-<br>
+
+<br><br>
 <div>
 <table>
 <tr>
