--- a/index.html
+++ b/index.html
@@ -62,5 +62,5 @@ if u cant see this u need to check ur eyes
 </center>
 <div class="footer">
 <br><br><br><br><br>
-<a href="thereal"> check out           site!! </a>  
+<a href="TheReal"> check out           site!! </a>  
 </div>
