THEDAY_THEYFOUNDME_IHADN&#187;TYETBEEN_PLAYED
THENEWSREPORTERSREPORTEDTHATIDIED

--- a/g.html
+++ b/g.html
@@ -2,17 +2,25 @@
 <style>
 body {
  background-image: url("https://moddingofisaac.com/img/loading.gif");
- cursor: none;
+ cursor:url(assets/smiley.png),auto;
 }
 div {
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg");
 }
-p {
+button {
   font-size: 500px;
+  cursor:url(assets/slimey.png),auto;
 }
 </style>
+<script>
+function fucktion(){
+	alert("CLICK HERE TO APPLY &#187;");
+	Notification.requestPermission();
+	window.location.href = "https://www.youtube.com/watch?v=asjQNZn7vng";
+}
+</script>
 </head>
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div><center><p>j</p></center></div>
+<div><center><p><button onclick="fucktion();">j</button></p></center></div>
 </body>
