--- a/games.html
+++ b/games.html
@@ -44,11 +44,13 @@
 <br>
 <br>
 <div class="fts1">
-<iframe frameborder="0" src="https://itch.io/embed/982786?border_width=5&amp;bg_color=00b056&amp;fg_color=ffffff&amp;link_color=000000&amp;border_color=239cde" width="560" height="175"><a href="https://will914.itch.io/findthesilver">Find The Silvers - Easter 2021 by Will914</a></iframe>
+<iframe frameborder="0" src="https://itch.io/embed/982786?border_width=5&amp;bg_color=00b056&amp;fg_color=ffffff&amp;link_color=000000&amp;border_color=239cde" width="560" height="175"><a href="https://miagaming.itch.io/findthesilver">Find The Silvers - Easter 2021 by Mia</a></iframe>
 </div>
 <br>
 <br>
-<iframe frameborder="0" src="https://itch.io/embed/1508797?border_width=5&amp;bg_color=22b14c&amp;fg_color=000000&amp;link_color=ffffff&amp;border_color=ffffff" width="560" height="175"><a href="https://will914.itch.io/find-the-silvers-2">F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 by Will914</a></iframe>
+<iframe frameborder="0" src="https://itch.io/embed/1508797?border_width=5&amp;bg_color=22b14c&amp;fg_color=000000&amp;link_color=ffffff&amp;border_color=ffffff" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silvers-2">F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 by Mia</a></iframe>
+<br><br><br>
+<iframe frameborder="0" src="https://itch.io/embed/1726718?border_width=5&amp;bg_color=360064&amp;fg_color=ffffff&amp;link_color=f79600&amp;border_color=ff9520" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silver-4">Find The Silvers 4 - Halloween 2022 by Mia</a></iframe>
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
