--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ css <s>coming soon</s> WIP
   <tr><th></th><td></td><td>I also gave the 404 page css and actual content and removed unused files from the dir and made new tags page</td></tr>
   <tr><th>6/02/2022</th><td>-</td><td>descriptosn</td></tr>
   <tr><th>10/02/2022</th><td>-</td><td><span title='took me way too long cause i used a semicolon and thats bad for some reason'>added new thingymabob to random code stuff</span> and added a funny flatulance to the about me page</td></tr>
+  <tr><th>12/10/2022</th><td>-</td><td><span title='and a whole lot of new pages that i havent said about here'>theres now a GAY FLAG 😲😀😀😀😀 page</span></td></tr>
 
 </table>
 </div>
