--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	.links{background-color: #000000;color: white;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block}
+	.links{background-color: #000000;color: white;padding: 5px 75px;text-align: center;text-decoration: none;display: inline-block}
 	a{color:#BCBCBC}
 	button{background-color: #00ff00}
 	h1{
@@ -59,7 +59,7 @@
 	<br>
 	<center>
 	<h1> About Me </h1>
-	<span id="menulinks">i am epic very!</span>
+	<span id="menulinks">i am epic very!</span> ​ ​ ​<a href="pride.html" class="links">PRIDEEE FLAGGSSSSSS</a>
 	<script src="links.js" type="text/javascript"></script>	</center>
 	<br>
 </div>
