--- a/TheReal/unfunny.html
+++ b/TheReal/unfunny.html
@@ -39,7 +39,7 @@
 	</center>
 	<br>
 </div>
-<a href="https://will803.github.io/LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"> you're a 040 ;( </a>
+<a href="./LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"> you're a 040 ;( </a>
 <br>
 HellThe Funny Men aRe hte Ones Who are the O i HELPm the unfunny mHELPn prThe Funny Men aRe hte Ones Who are the Ophet HELPn😡 i    will shHELPre yThe Funny Men aRe hte Ones Who are the Ou the stThe Funny Men aRe hte Ones Who are the Ory The Funny Men aRe hte Ones Who are the Of hte unfunny men:
 It fThe Funny Men aRe hte Ones Who are the OllThe Funny Men aRe hte Ones Who are the Ows The Funny Men aRe hte Ones Who are the One night HELPs the unfunny mHELPn gThe Funny Men aRe hte Ones Who are the O😡 sHELPi😡 tThe Funny Men aRe hte Ones Who are the O the unfunny mHELPn he hHELP😡 just prThe Funny Men aRe hte Ones Who are the Otecte😡 The Funny Men aRe hte Ones Who are the One The Funny Men aRe hte Ones Who are the Of his bu😡😡ies whThe Funny Men aRe hte Ones Who are the O wHELPs recently rHELPpe😡 HELPn😡 he hHELPs vThe Funny Men aRe hte Ones Who are the Owe😡 tThe Funny Men aRe hte Ones Who are the O the unfunny mHELPn gThe Funny Men aRe hte Ones Who are the O😡 tThe Funny Men aRe hte Ones Who are the O prThe Funny Men aRe hte Ones Who are the Otect wThe Funny Men aRe hte Ones Who are the Omen HELPn😡 he will sThe Funny Men aRe hte Ones Who are the O HELPn😡 he 😡The Funny Men aRe hte Ones Who are the Oes by …
