--- a/040.html
+++ b/040.html
@@ -39,7 +39,7 @@
 	</center>
 	<br>
 </div>
-<a href="https://will803.github.io/LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"> you're a 040 ;( </a>
+<a href="LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"> you're a 040 ;( </a>
 <br>
 Hello i am the funny man prophet and i    will share you the story of hte funny men:
 It follows one night as the funny man god said to the funny man he had just protected one of his buddies who was recently raped and he has vowed to the funny man god to protect women and he will so and he does by …
