--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
 	<center>
 	<h1> About Me </h1>
 	<a href="index.html" class="links"> Main Page </a> ​ ​ ​<a href="games.html" class="links"> Games </a> ​ ​ ​<a href="code.html" class="links"> Random Code Stuff </a> ​ ​ ​<a href="aboutthem.html" class="links"> About Me </a> ​ ​ ​<a href="pride.html" class="links">PRIDEEE FLAGGSSSSSS</a>
-	<script src="links.js" type="text/javascript"></script>	</center>
+	<!-- <script src="links.js" type="text/javascript"></script>	</center> -->
 	<br>
 </div>
 <center>
