--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
 	</center>
 	<br>
 </div>
-<a href="https://will803.github.io/"> you're a 404 ;( </a>
+<a href="https://miastonished.github.io/"> you're a 404 ;( </a>
 <br><br>
 <a href="040.html"> Now Learn </a>
 <br>
