--- a/index.old.html
+++ b/index.old.html
@@ -26,7 +26,7 @@
 	<center>
 		<h1>hi</h1>
 	<span id="menulinks">idex dot old dot html</span>
-	<script src="links.js" type="text/javascript"></script>
+	<script src="links2.js" type="text/javascript"></script>
 	</center>
 	<br>
 </div>
@@ -139,7 +139,7 @@ if u can see this you are in the wrong place
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
-<a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
+<a href="http://melbirnkrant.com/land/index.html"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
