new king gizzard
FROG BREATH

--- a/game.html
+++ b/game.html
@@ -26,6 +26,11 @@
 	    color: white;
 	}
 	</style>
+	<script>
+	setTimeout(() => {
+	window.location.replace("Timer.html")
+	}, "15000");
+	</script>
 </head>
 
 <div> <!--class="header"--->
