--- a/index.old.html
+++ b/index.old.html
@@ -1,12 +1,12 @@
 <head>
 	<title>
-    Mia's EPIC Site
+    Wrongfully So
     </title>
-	<meta name="description" content="This site is very epic!">
+	<meta name="description" content="This site isn't">
 	<script>
 	function title(){
 		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
-		setTimeout(title, 100);
+		setTimeout(title, 50);
 	}	
 	title()
 	</script>
@@ -120,7 +120,7 @@ if u can see this you are in the wrong place
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
-<a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
+<a href="https://www.webmd.com/urinary-incontinence-oab/ss/slideshow-incontinence-frequent-pee"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
@@ -153,7 +153,7 @@ if u can see this you are in the wrong place
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
-<a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
+<a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out ste!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
 <a href="https://en.wikipedia.org/wiki/The_Real_(talk_show)"> check out site!! </a>  
