--- a/pride.html
+++ b/pride.html
@@ -90,6 +90,9 @@
 			);
 	}
 	.lesbian {
+		margin-left: 50%;
+		float: right; 
+		width: 50%; 
 		background-image: 
 			linear-gradient(
 				180deg,
@@ -102,6 +105,168 @@
 				#D162A4 60%,
 				#D162A4 80%,
 				#B00B69 80%
+			);
+	}
+	.lesbian2 {
+		margin-right: 50%; 
+		background-image: 
+			linear-gradient(
+				180deg,
+				#D52D00,
+				#D52D00 14.3%,
+				#EF7627 14.3%,
+				#EF7627 28.6%,
+				#FF9A56 28.6%,
+				#FF9A56 42.9%,
+				#FFFFFF 42.9%,
+				#FFFFFF 57.2%,
+				#D162A4 57.2%,
+				#D162A4 71.5%,
+				#B55690 71.5%,
+				#B55690 85.8%,
+				#B00B69 85.8%
+			);
+	}
+	.gay {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#078D70,
+				#078D70 14.3%,
+				#26CEAA 14.3%,
+				#26CEAA 28.6%,
+				#98E8C1 28.6%,
+				#98E8C1 42.9%,
+				#FFFFFF 42.9%,
+				#FFFFFF 57.2%,
+				#7BADE2 57.2%,
+				#7BADE2 71.5%,
+				#5049CC 71.5%,
+				#5049CC 85.8%,
+				#3D1A78 85.8%
+			);
+	}
+	.tmasc {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#FF8ABD,
+				#FF8ABD 14.3%,
+				#CDF5FE 14.3%,
+				#CDF5FE 28.6%,
+				#9AEBFF 28.6%,
+				#9AEBFF 42.9%,
+				#74DFFF 42.9%,
+				#74DFFF 57.2%,
+				#9AEBFF 57.2%,
+				#9AEBFF 71.5%,
+				#CDF5FE 71.5%,
+				#CDF5FE 85.8%,
+				#FF8ABD 85.8%
+			);
+	}
+	.tfem {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#5bcefa,
+				#5bcefa 14.3%,
+				#f7dae6 14.3%,
+				#f7dae6 28.6%,
+				#f7afcf 28.6%,
+				#f7afcf 42.9%,
+				#f688b9 42.9%,
+				#f688b9 57.2%,
+				#f7afcf 57.2%,
+				#f7afcf 71.5%,
+				#f7dae6 71.5%,
+				#f7dae6 85.8%,
+				#5bcefa 85.8%
+			);
+	}
+	.demiboy {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#7F7F7F,
+				#7F7F7F 14.3%,
+				#C4C4C4 14.3%,
+				#C4C4C4 28.6%,
+				#9AD9EB 28.6%,
+				#9AD9EB 42.9%,
+				#FFFFFF 42.9%,
+				#FFFFFF 57.2%,
+				#9AD9EB 57.2%,
+				#9AD9EB 71.5%,
+				#C4C4C4 71.5%,
+				#C4C4C4 85.8%,
+				#7F7F7F 85.8%
+			);
+	}
+	.demigirl {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#7F7F7F,
+				#7F7F7F 14.3%,
+				#C4C4C4 14.3%,
+				#C4C4C4 28.6%,
+				#FDADC8 28.6%,
+				#FDADC8 42.9%,
+				#FFFFFF 42.9%,
+				#FFFFFF 57.2%,
+				#FDADC8 57.2%,
+				#FDADC8 71.5%,
+				#C4C4C4 71.5%,
+				#C4C4C4 85.8%,
+				#7F7F7F 85.8%
+			);
+	}
+	.pride {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#E40303,
+				#E40303 16.6%,
+				#FF8C00 16.6%,
+				#FF8C00 33.3%,
+				#FFED00 33.3%,
+				#FFED00 50%,
+				#008026 50%,
+				#008026 66.6%,
+				#24408E 66.6%,
+				#24408E 83.2%,
+				#732982 83.2%
+			);
+	}
+	.agender {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#000000,
+				#000000 14.3%,
+				#BCC4C7 14.3%,
+				#BCC4C7 28.6%,
+				#FFFFFF 28.6%,
+				#FFFFFF 42.9%,
+				#B7F684 42.9%,
+				#B7F684 57.2%,
+				#FFFFFF 57.2%,
+				#FFFFFF 71.5%,
+				#BCC4C7 71.5%,
+				#BCC4C7 85.8%,
+				#000000 85.8%
+			);
+	}
+	.neutrois {
+		background-image: 
+			linear-gradient(
+				180deg,
+				#FFFFFF,
+				#FFFFFF 33%,
+				#1F9F00 33%,
+				#1F9F00 66%,
+				#000000 66%
 			);
 	}
 	</style>
@@ -117,6 +282,8 @@
 </div>
 <center>
 <div class="container">
+<p class="pride"><br><br><br><br><br><br><br><br><br><br></p>
+<br>
 <p class="trans"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
 <p class="enby"><br><br><br><br><br><br><br><br><br><br></p>
@@ -129,23 +296,32 @@
 <br>
 <p class="intersex"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
-<p class="lesbian"><br><br><br><br><br><br><br><br><br><br></p>
+<div class="lesbian"><br><br><br><br><br><br><br><br><br><br></div>
+<div class="lesbian2"><br><br><br><br><br><br><br><br><br><br></div>
 <br>
+<p class="gay"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="tmasc"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="tfem"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="demiboy"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="demigirl"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="agender"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
+<p class="neutrois"><br><br><br><br><br><br><br><br><br><br></p>
 <br>
 <br>
 <br>
 <p class="pan"><br>currently unused slider <input type="range" min="0" max="10" value="0" id="sliderlol"><br><br></p>
+<p class="pan"><br>currently unused slide2 <input type="range" min="0" max="10" value="0" id="sliderlol"><br><br></p>
 <script>
 var slider = document.getElementById("sliderlol");
-var funny = document.getElementsByClassName("br");
+var funny = document.getElementsByTagName("br");
 slider.oninput = function() {
-  funny.style.margin = this.value+"px";
+  funny.style.lineHeight = this.value+"px";
   debug.Log(this.value)
 }
 </script>
