--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -4,19 +4,24 @@
     </title>
 	<meta name="description" content="The truth of Silver ShXXXXXXir">
 	<style>
-	html, body {margin:0;padding:0;}
+	@font-face {
+		font-family: silver;
+		src: url(assets/silver-emoji.ttf);
+	}
+	html, body {margin:0;padding:0;font-family: silver;}
 	img {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
 	body {
-		background-image:linear-gradient(45deg, #ffffff 0%, #000 50%, #000 50%, #ffffff 100%);
+		background-image:linear-gradient(92deg, #ffffff 0%, #794004 5%, #8e4b05 95%, #ffffff 100%);
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
 	a:visited{display:none;}
 	button{background-color: #626262}
 	h1{
-	    color: 626262;
+	    color: ffffff;
+		
 	}
 	.p1{
 	    color: white;
@@ -30,7 +35,7 @@
 <div> <!--class="header"--->
 	<br>
 	<center>
-	<h1> Games </h1>
+	<h1> THE TRUTH BEHIND SILVER SHORTHAIR &dagger;</h1>
 	<span id="menulinks">The Truth Behind Behind</span>SILVER SHORTHAIR
 	<script src="links2.js" type="text/javascript"></script></center>
 	<br>
@@ -44,6 +49,8 @@
 <br>
 <br>
 <img src="assets/ohgod2.png" width="50%" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
+<br>
+<h2>™™©™™™™™™™™™™™™™™™®™</h2>
 </center>
 <!-- <div class="footer">
 <br><br><br><br><br>
