--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -45,13 +45,38 @@
 <br>
 <br>
 <p class="p1">THIS IS THE TRUTH BEHIND SILVER SHORTHAIR</p>
-<p class="p1">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
+<!--<script>
+let findow = false
+function silly(){
+	a = true
+	let findow = open('https://google.com', 'example', 'width=300,height=300');
+}
+findow.onblur = () => setTimeout(windowHandle.focus, 0);
+</script>-->
+<p onclick="silly();" class="p1">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
 <br>
 <br>
 <img src="assets/ohgod2.png" width="50%" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
 <br>
 <h2>™™©™™™™™™™™™™™™™™™®™</h2>
 </center>
+
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
+<script>
+	function fart(){
+		document.title = "THE TRUTH BEHIND SILVER SHORTHAIR VOL."+Math.round(Math.random()+Math.random()+Math.random()*Math.random()+Math.random());
+		if (Math.random() < 0.1) {
+			console.error("Silver Exception Invalid");
+		} else if (Math.random() < 0.25){
+			console.error("function 'Silver' not defined at line "+Math.floor(Math.random() * (50000 - 1) + 1));
+		} else if (Math.random() < 0.1){
+			console.error("Unspecified Threat Received");
+		} else {
+			console.error("Cannot send SILVER request to "+Math.floor(Math.random() * (200 - 1) + 1)+"."+Math.floor(Math.random() * (150 - 1) + 1)+"."+Math.floor(Math.random() * (99 - 1) + 1)+"."+Math.floor(Math.random() * (99 - 1) + 1));
+		}
+		setTimeout(fart, 100);
+	}	
+	fart()
+</script>
