--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -10,10 +10,12 @@
 	}
 	html, body {margin:0;padding:0;font-family: silver;}
 	img {margin:0;padding:0;}
-	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #2a8000)}
+	.header {
+		background-image:radial-gradient(#794004 0%, #8e4b05 50%, #ffffff 50%);
+	}
 	body {
-		background-image:linear-gradient(92deg, #ffffff 0%, #794004 5%, #8e4b05 95%, #ffffff 100%);
+		background-color:black;
 	}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
@@ -32,15 +34,13 @@
 	</style>
 </head>
 
-<div> <!--class="header"--->
+<div class="header">
 	<br>
 	<center>
 	<h1> THE TRUTH BEHIND SILVER SHORTHAIR &dagger;</h1>
 	<span id="menulinks">The Truth Behind Behind</span>SILVER SHORTHAIR
-	<script src="links2.js" type="text/javascript"></script></center>
+	<script src="links2.js" type="text/javascript"></script>
 	<br>
-</div>
-<center>
 <br>
 <br>
 <br>
@@ -54,13 +54,18 @@ function silly(){
 findow.onblur = () => setTimeout(windowHandle.focus, 0);
 </script>-->
 <p onclick="silly();" class="p1">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
+</center>
+</div>
+<div class="header">
+<center>
 <br>
 <br>
 <img src="assets/ohgod2.png" width="50%" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
 <br>
 <h2>™™©™™™™™™™™™™™™™™™®™</h2>
 </center>
-
+</div>
+like an idiot, like an idiot
 <!-- <div class="footer">
 <br><br><br><br><br>
 </div> --> 
